--- a/angular.json
+++ b/angular.json
@@ -56,7 +56,7 @@
                   "maximumError": "5mb"
                 },
                 {
-                  "type": "anyComponentStyle",
+                  "type": "any",
                   "maximumWarning": "6kb"
                 }
               ]
